--- a/style.css
+++ b/style.css
@@ -1,61 +1,61 @@
 *{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   background-color: #b39b83;
-}
-
-.calculadora{
-    width: 400px;
-    height: 500px;
-    margin: 0 auto;
-    text-align: center;
-    background-color:#836243;
-    padding-top:50px;
-    border-radius: 30px;
-}
-
-.calculadora input[type="text"]{
-    width: 80%;
-    height: 50px;
-    font-size: 20px;
-    margin-bottom: 20px;
-    text-align: right;
-    padding-right: 20px;
-    border: 2px solid #5f4631;
-    border-radius: 10px;
-    background-color: #937454;
-    color:rgb(255, 255, 255);
-}
-
-.calculadora button{
-    width: 20%;
-    height: 50px;
-    font-size: 20px;
-    margin-bottom: 20px;
-    background-color: #dec4aa;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.4s;
-    border-color: #8c684a;
-    
-}
-
-.calculadora button:hover{
-    background-color: #8c684a;
-    color: #fff;
-    border-color: #5f4631;
-}
-
-.calculadora .operador{
-    background-color: #937454;
-    color: #fff;
-}
-
-#igual{
-    width: 40%;
-}
-
-#limpar{
-    width: 60%;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #b39b83;
+ }
+ 
+ .calculadora{
+     width: 400px;
+     height: 500px;
+     margin: 14vh  70vh;
+     text-align: center;
+     background-color:#836243;
+     padding-top:30px;
+     border-radius: 30px;
+ }
+ 
+ .calculadora input[type="text"]{
+     width: 80%;
+     height: 50px;
+     font-size: 20px;
+     margin-bottom: 20px;
+     text-align: right;
+     padding-right: 20px;
+     border: 2px solid #5f4631;
+     border-radius: 10px;
+     background-color: #937454;
+     color:rgb(255, 255, 255);
+ }
+ 
+ .calculadora button{
+     width: 20%;
+     height: 50px;
+     font-size: 20px;
+     margin-bottom: 20px;
+     background-color: #dec4aa;
+     border-radius: 10px;
+     cursor: pointer;
+     transition: 0.4s;
+     border-color: #8c684a;
+     
+ }
+ 
+ .calculadora button:hover{
+     background-color: #8c684a;
+     color: #fff;
+     border-color: #5f4631;
+ }
+ 
+ .calculadora .operador{
+     background-color: #937454;
+     color: #fff;
+ }
+ 
+ #igual{
+     width: 40%;
+ }
+ 
+ #limpar{
+     width: 60%;
+ }
